# Pipline

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: housing_model.pkl
data/: housing.csv
notebooks/: 01_exploration.ipynb
src/housing/: main.py  modeling.py  schemas.py
tests/: test_api.py  test_modeling.py
